--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.14.1",
     "@azure/msal-react": "^1.0.0-beta.2",
+    "@microsoft/file-browser": "^1.0.0-preview.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -17,6 +18,7 @@
     "@types/styled-components": "^5.1.9",
     "antd": "^4.15.0",
     "axios": "^0.21.1",
+    "office-ui-fabric-react": "^7.168.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
