--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-beautiful-dnd": "^13.0.0",
@@ -18,6 +19,7 @@
     "@types/styled-components": "^5.1.9",
     "antd": "^4.15.0",
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "office-ui-fabric-react": "^7.168.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
